--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://iota-school.github.io/accessibility_hackathon/
+" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Space Telescope Science Institute Accessibility Hackathon, March 2023" # the name of your site, e.g. ACME Corp.
 
