--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 url: "https://iota-school.github.io/day_accessibility" # the base hostname & protocol for your site, e.g. http://example.com
 root: /
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/day_accessibility" # the subpath of your site, e.g. /blog
 title: "STScI Day of Accessibility" # the name of your site, e.g. ACME Corp.
 
 
